# cortex-engine

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/kernels/: fused_rmsnorm.json  results.md  sparse_xattn.json  tokenizer.json
benchmarks/profiling/: baseline_report.md  profiler_table.txt
benchmarks/quantization/: results.md
benchmarks/serving/: results.md
benchmarks/training/: results.md  trial_aligned_results.md  trial_aligned_results_cuda.md
configs/: cortex_m.yaml  cortex_s.yaml  cortex_xs.yaml
configs/data/: mc_maze.yaml
configs/model/: cortex_m.yaml  cortex_s.yaml  cortex_xs.yaml
configs/runtime/: default.yaml
configs/serving/: default.yaml
configs/training/: default.yaml
cortex/: __init__.py
cortex/cache/: __init__.py  streaming.py
cortex/data/: __init__.py  nlb.py
cortex/kernels/: __init__.py  bench_fused_rmsnorm.py  bench_sparse_xattn.py  bench_tokenizer.py  fused_rmsnorm.py  sparse_xattn.py  tokenizer.py
cortex/models/: __init__.py  config.py  cortex.py  perceiver.py  tokenizer.py
cortex/quantization/: __init__.py  calibrate.py
cortex/serve/: __init__.py  app.py  metrics.py  scheduler.py  schemas.py  tracing.py  worker.py
cortex/training/: __init__.py  baselines.py  checkpoint.py  eval.py  train.py
cortex/utils/: __init__.py  device.py  logging.py
docs/: CORTEX_ENGINE_ROADMAP.md  PROJECT_PLAN.md  runbook.md  slo.md  writeup.md
ops/dashboards/: latency.json  resources.json  traffic.json
ops/docker/: Dockerfile  Dockerfile.cpu  alerts.yml  docker-compose.cpu.yml  docker-compose.yml  otel-collector.yml  prometheus.yml
ops/docker/grafana-provisioning/dashboards/: cortex.yml
ops/helm/cortex-engine/: Chart.yaml  values.yaml
ops/helm/cortex-engine/templates/: deployment.yaml  servicemonitor.yaml
ops/k6/: load_test.js
scripts/: baseline_benchmark.py  calibrate_model.py  eval_trial_aligned.py  load_test.py  profile_inference.py  train_benchmark.py
tests/: conftest.py
tests/unit/: test_baseline_features.py  test_baseline_gru.py  test_baseline_transformer.py  test_baseline_wiener.py  test_data_nlb.py  test_kernel_fused_rmsnorm.py  test_kernel_sparse_xattn.py  test_kernel_tokenizer.py  test_model_smoke.py  test_quantization.py  test_training_checkpoint.py  test_training_eval.py  test_training_train.py  test_training_wandb.py  test_utils_device.py
